# catshand

./: .gitignore  MANIFEST.in  README.md  change_log.md  environment.yml  environment_win.yml  install.sh  pyproject.toml  requirement.txt  requirement_core.txt  requirements.txt  setup.py
archive/: environment_old.yml  requirement_win.txt
example/: wavdivider.py
pipefunc/: pipe_test.py
src/catshand/: audacitytool.py  dash.py  hosts.json  main.py  openai.py  openai_api.py  pipefunc.py  postproc.py  utility.py
src/catshand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/catshand/CLI/: postedit_multitrack.sh  postedit_singletrack.sh
src/catshand/config/: audt_config.json  hosts_dict.json
src/catshand/tools/: app.py  audacitypipe.py  audacitypipe_prjpre.py  audio2wav.py  audiosplit.py  audmerger.py  cleanvoice.py  convert_to_wav.py  highlight.py  linkparser.py  mt_removesilent.py  prjgen.py  prjinit.py  prjpost.py  prjpre.py  prjsummary.py  silrm.py  trackmerger.py  wavdivider.py
src/tclh/: utility.py  webtool.py
src/tclh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tools/: postfilemerger.py
src/tripodcats_little_helper/: _module.py
test/: test_array.py  test_postedit.sh  test_preedit.sh
tools/: audacity_tool.py  highlight.py  instruction.md  linkparser.py  postfilemerger.py  split_test.csv  wavdivider.py  wavfconverter.py
