[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "catshand"
version = "0.3.4"
description = "Tools for Podcast editing"
readme = "README.md"
authors = [
    {name = "Mike Chien-Cheng Shih", email = "m.cc.shih@gmail.com"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
]
requires-python = ">=3.9"
dependencies = [
    "numpy", "jupyterlab", "librosa", "pydub", "pandas", "matplotlib", "tqdm", "click", "OpenCC"
]
license = {text = "BSD 2-clause"}

[project.urls]
Homepage = "https://github.com/eufmike/catshand"

[project.scripts]
catshand = "catshand.main:main"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]



[tool.bumpver]
current_version = "0.3.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/catshand/__init__.py" = ["{version}"]

