[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "catshand"
version = "0.3.5"
description = "Tools for Podcast editing"
readme = "README.md"
authors = [
    {name = "Mike Chien-Cheng Shih", email = "m.cc.shih@gmail.com"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
]
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.1.2",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "openai>=1.13.3",
    "librosa>=0.10.0",
    "click>=8.1.3",
    "fuzzywuzzy>=0.18.0",
    "pydub>=0.25.1",
    "tqdm>=4.66.2",
    "lxml>=5.1.0",
    "dash>=2.16.0",
    "tiktoken>=0.6.0",
    "OpenCC==1.1.7",
    "noisereduce==2.0.1",
    "fake_useragent>=1.4.0", 
    "dash_bootstrap_components==1.4.1", 
    "python-Levenshtein==0.25.0"
]
license = {text = "BSD 2-clause"}

[project.urls]
Homepage = "https://github.com/eufmike/catshand"

[project.scripts]
catshand = "catshand.main:main"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
win = ["pywin32", "pywinpty"]


[tool.bumpver]
current_version = "0.3.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/catshand/__init__.py" = ["{version}"]

